--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ title: Python for Data Science
 email: stefan@applied-ai.solutions
 description: This site contains teaching materials for Python for Data Science.
 github_username:  AppliedArtificialIntelligence
+linkedin:  text
+stackoverflow: text
 
 # Build settings
 markdown: kramdown
